styles.css
/* CSS Reset */
/* Feels like it pauses before sidenav comes down */

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  3. Allow percentage-based heights in the application
*/
html,
body {
  height: 100%;
}
/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}
/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
  9. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

img {
  border-radius: 8px 8px 0 0;
  background-color: white;
}

a {
  text-decoration: none;
  color: black;
}

.wrapper {
  max-width: 1400px;
  margin: 0 auto;
  padding: 16px;
  font-family: "Suez One", serif;
}

.lime-light {
  font-family: "Limelight", sans-serif;
}

.nav-mobile {
  display: none;
}

.nav {
  display: flex;
  height: 36px;
  background-color: #fee1b7;
  font-family: "Suez One", serif;
  padding-left: 32px;
  padding-right: 32px;
  justify-content: space-between;
}

.nav-name {
  color: #fb5e79;
  align-self: center;
}

.nav-items {
  display: flex;
  gap: 24px;
  align-self: center;
}

.nav-projects:hover {
  color: #fb5e79;
}

.nav-writing:hover {
  color: #fb5e79;
}

/*****  INTRO SECTION  *****/

.info-mobile {
  display: none;
}

.info {
  display: flex;
  align-items: center;
}

.intro {
  flex: 1;
  text-align: center;
}

.intro-1 {
  padding-right: 130px;
  font-size: 70px;
  line-height: 1.1;
}

.intro-2 {
  padding-left: 220px;
  font-size: 70px;
  line-height: 1.1;
}

.tyra {
  color: #fb5e79;
}

.description {
  font-size: 28px;
  color: #fb5e79;
  padding: 16px;
}

.tyra-img {
  flex: 1;
}

.swirly-lines {
  width: 300px;
}

.subTitle {
  margin: 24px auto 48px auto;
  width: fit-content;
  text-align: center;
  font-weight: 600;
}

.projects {
  color: #fb5e79;
  font-size: 48px;
  margin-bottom: -8px;
}

.cardWrapper {
  margin: 0 auto;
  max-width: 900px;
}

.card {
  display: flex;
  gap: 8px;
  text-align: center;
  margin-bottom: 48px;
  font-size: 1.1rem;
  text-decoration: none;
  border-radius: 8px;
  box-shadow: 1px 3px 9px rgba(0, 0, 0, 0.1), 1px 3px 9px rgba(0, 0, 0, 0.03);
}

.cardText {
  flex: 1;
  padding: 8px 16px;
  border-radius: 0 0 8px 8px;
}

.cardImg {
  flex: 1;
}

.cardImg img {
  max-height: 500px;
  width: fit-content;
  border-radius: 8px 0 0 8px;
}

.cardTitle {
  margin-top: 16px;
  margin-bottom: 8px;
  font-size: 1.7rem;
  color: #fb5e79;
}

.cardButton {
  border: #fb5e79 1px solid;
  background-color: white;
  padding: 16px;
  margin: 16px;
  border-radius: 16px;
  color: #fb5e79;
}

.cardDescription {
  text-align: left;
  margin: 16px 0;
}

.writing-wrapper {
  background-color: #fee1b7;
  padding: 16px 16px 48px 16px;
}

.writing-card {
  background-color: white;
  border-radius: 8px;
  max-width: 900px;
  margin: 16px auto 32px auto;
  display: flex;
  gap: 24px;
}

.writing-card img {
  width: 275px;
  height: 275px;
  object-fit: cover;
  border-radius: 8px 0 0 8px;
}

.writing-img {
  flex: 1 1 30%;
  min-width: 250px;
}

.writing-card-wrapper {
  flex: 1 1 70%;
}

.writing-title {
  display: block;
  color: #fb5e79;
  font-family: "Suez One", serif;
  font-size: 1.7rem;
  padding-top: 16px;
  padding-bottom: 16px;
  width: fit-content;
}

.writing-title:hover {
  color: #e43956;
}

.writing-para {
  font-family: "Suez One", serif;
  font-size: 16px;
  padding-right: 16px;
}

.writing-link {
  color: #fb5e79;
}

.writing-link:hover {
  color: #e43956;
}

.swirly-lines-writing {
  width: 270px;
}

.footer {
  height: 200px;
  background-color: #fb5e79;
}

/* STYLES ONLY DISPLAYED ON MOBILE */

.text-intro-mobile {
  font-size: 42px;
  margin-top: 32px;
  margin-bottom: -32px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: fit-content;
}

.intro-1-mobile {
  padding-right: 56px;
}

.intro-2-mobile {
  padding-left: 64px;
}

.description-mobile {
  margin-top: -22px;
  font-size: 24px;
  color: #fb5e79;
  text-align: center;
}

.nav-mobile {
  height: 36px;
  background-color: #fee1b7;
  font-family: "Suez One", serif;
  padding-left: 16px;
  padding-right: 16px;
  justify-content: space-between;
  align-items: center;
}

.menu-icon-mobile {
  width: 24px;
}

.nav-name {
  color: #fb5e79;
}

/* RESPONSIVE MOBILE/TABLET SIZES */

/* TABLET */
@media (max-width: 1100px) {
  .intro-1 {
    padding-right: 80px;
    font-size: 50px;
  }

  .intro-2 {
    padding-left: 100px;
    font-size: 50px;
  }

  .description {
    font-size: 20px;
  }

  .swirly-lines {
    width: 200px;
  }

  .projects {
    font-size: 32px;
  }

  .cardWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .card {
    display: block;
    margin: 16px;
  }

  .cardImg img {
    border-radius: 8px 8px 0 0;
  }

  .writing-wrapper {
    padding-left: 32px;
    padding-right: 32px;
  }

  .writing-grid-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 32px;
  }

  .writing-card {
    display: block;
    margin: 0;
  }

  .writing-card-wrapper {
    padding: 16px;
  }

  .writing-img img {
    border-radius: 8px 8px 0 0;
    width: 100%;
    height: 350px;
  }

  .position-bottom {
    object-position: bottom;
  }

  .position-top {
    object-position: top;
  }
}

/* IN BETWEEN */
@media (max-width: 800px) {
  .intro-1 {
    padding-right: 50px;
    font-size: 40px;
  }

  .intro-2 {
    padding-left: 80px;
    font-size: 40px;
  }

  .description {
    font-size: 18px;
  }

  .card {
    margin: 16px;
  }

  .writing-wrapper {
    padding-left: 16px;
    padding-right: 16px;
  }

  .writing-grid-wrapper {
    grid-template-columns: 1fr;
    gap: 16px;
  }
}

/* MOBILE */
@media (max-width: 650px) {
  .nav {
    display: none;
  }
  .nav-mobile {
    display: flex;
  }
  .info-mobile {
    display: block;
  }
  .info {
    display: none;
  }
  .cardWrapper {
    display: grid;
    grid-template-columns: 1fr;
  }

  .cardImg img {
    width: 100%;
    object-fit: cover;
  }

  .projects {
    margin-top: 64px;
  }
  .card {
    margin: 16px 0 0 0;
  }

  .subTitle {
    margin: 24px auto;
  }

  .swirly-lines-writing {
    width: 185px;
  }

  .writing-title {
    padding-top: 8px;
    padding-bottom: 8px;
  }

  .footer {
    height: 60px;
  }
}

